--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,11 @@ Authors@R:
   person("Clemens","Kreutz",
   email = "clemens.kreutz@uniklinik-freiburg.de",
   role = c("aut","ctb"), 
-  comment = c(ORCID = "0000-0002-8796-5766")),
+  comment = c(ORCID = "0000-0002-8796-5766"))
   person("Eva","Brombacher",
   email = "eva.brombacher@uniklinik-freiburg.de",
   role = c("aut","ctb"), 
-  comment = c(ORCID = "0000-0002-5488-0985")))
+  comment = c(ORCID = "0000-0002-5488-0985"))
 Author: Eva Brombacher
 Maintainer: Eva Brombacher <eva.brombacher@uniklinik-freiburg.de>
 Description: Fitting of retarded transient function to time resolved data
@@ -19,7 +19,8 @@ Imports:
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-VignetteBuilder: 
+VignetteBuilder: knitr
+RoxygenNote: 7.2.3
+Suggests: 
     knitr,
     rmarkdown
-RoxygenNote: 7.2.3
