--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(initializeOptimObject)
 export(objFunct)
 export(plotFit)
 export(plotModelComponents)
+export(plotNonLinearTransformation)
 export(plotParameterDistribution)
 export(plotSignalSus)
 export(plotSignalTrans)
@@ -30,3 +31,4 @@ export(selectPlusOrMinus)
 export(selectSmallerModelIfDiffIsSmall)
 export(sortListByValue)
 export(takeLog10OfBounds)
+importFrom(patchwork,plot_layout)
