modified such that t_prime only occurs in getTransientFunctionResult

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(getData)
 export(getExampleDf)
 export(getFittingResult)
 export(getFittingResults_fixedSignumTF)
-export(getInitialGuessResults)
 export(getInitialGuessVec)
+export(getMultiStartResults)
 export(getNamedVectorsFromDf)
 export(getNonLinTransformationPlusOffset)
 export(getPositiveParNames)
@@ -17,17 +17,17 @@ export(getTransientFunctionResult)
 export(initializeOptimObject)
 export(objFunct)
 export(plotFit)
-export(plotModelComponents)
 export(plotNonLinearTransformation)
 export(plotParameterDistribution)
+export(plotRTFComponents)
 export(plotSignalSus)
 export(plotSignalTrans)
 export(plotTvsTprime)
 export(plotWaterfallPlot)
 export(runOptimization)
 export(runRTF)
-export(scaleTimeCol)
-export(selectPlusOrMinus)
+export(scaleTimeParameter)
+export(selectBest)
 export(selectSmallerModelIfDiffIsSmall)
 export(sortListByValue)
 export(takeLog10OfBounds)
