--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(getSignalSusPlusOffset)
 export(getSignalTransPlusOffset)
 export(getTransientFunctionExampleData)
 export(getTransientFunctionResult)
+export(hillEquation)
+export(hillEquationReciprocal)
 export(initializeOptimObject)
 export(objFunct)
 export(plotFit)
