--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(getBestFittingResult)
 export(getData)
+export(getDoseResponseExampleDf)
 export(getExampleDf)
 export(getFittingResult)
 export(getInitialGuessVec)
