--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(hillEquation)
 export(hillEquationReciprocal)
 export(initializeOptimObject)
 export(objFunct)
+export(plot)
 export(plotFit)
 export(plotMultiStartPlots)
 export(plotNonLinearTransformation)
