Modified dose-response visualization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,11 +18,12 @@ export(hillEquation)
 export(hillEquationReciprocal)
 export(initializeOptimObject)
 export(objFunct)
-export(plot)
+export(plotDoseResponse)
 export(plotFit)
 export(plotMultiStartPlots)
 export(plotNonLinearTransformation)
 export(plotParameterDistribution)
+export(plotRTF)
 export(plotRTFComponents)
 export(plotSignalSus)
 export(plotSignalTrans)
