Updated Dose repsonse RTF visualization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(hillEquation)
 export(hillEquationReciprocal)
 export(initializeOptimObject)
 export(objFunct)
+export(plotData)
 export(plotDoseResponse)
 export(plotFit)
 export(plotMultiStartPlots)
