--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(getData)
 export(getDoseResponseExampleDf)
 export(getExampleDf)
 export(getFittingResult)
+export(getHillResults)
 export(getInitialGuessVec)
 export(getMultiStartResults)
 export(getNamedVectorsFromDf)
@@ -12,7 +13,6 @@ export(getNonLinTransformationPlusOffset)
 export(getPositiveParNames)
 export(getSignalSusPlusOffset)
 export(getSignalTransPlusOffset)
-export(getTransientFunctionExampleData)
 export(getTransientFunctionResult)
 export(hillEquation)
 export(hillEquationReciprocal)
