--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R:
   comment = c(ORCID = "0000-0002-5488-0985"))
 Description: Fitting of retarded transient function to time resolved data.
 Imports: 
-    stats, ggplot2, reshape2, readxl, patchwork, methods, grDevices
+    stats, ggplot2, reshape2, readxl, patchwork, grDevices, dplyr
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
