Added function for low dimensional representation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,32 +2,43 @@
 
 export(getBestFittingResult)
 export(getData)
+export(getDynamicsForClusters)
 export(getExampleDf)
 export(getFittingResult)
 export(getHillResults)
 export(getInitialGuessVec)
+export(getLowDimensionalRTF)
+export(getLowDimensionalRTFPlots)
 export(getMultiStartResults)
 export(getNamedVectorsFromDf)
 export(getNonLinTransformationPlusOffset)
+export(getParamDf)
+export(getParamsFromMultipleTimeSeries)
 export(getPositiveParNames)
 export(getSignalSusPlusOffset)
 export(getSignalTransPlusOffset)
 export(getTransientFunctionResult)
+export(getUMAPplot)
 export(hillEquation)
 export(hillEquationReciprocal)
 export(initializeOptimObject)
 export(objFunct)
 export(plotData)
+export(plotDynamicsForClusters)
 export(plotFit)
+export(plotParDistributionForClusters)
 export(plotParameterDistribution)
 export(plotRTF)
 export(plotRTFComponents)
+export(plotRTFForAllTimeSeries)
 export(plotWaterfallPlot)
 export(runOptimization)
 export(runRTF)
+export(runRTFOnMultipleTimeSeries)
 export(scaleTimeParameter)
 export(selectBest)
 export(selectSmallerModelIfDiffIsSmall)
 export(sortListByValue)
 export(takeLog10OfBounds)
 import(patchwork)
+importFrom(dplyr,"%>%")
