--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RTF
 Type: Package
 Title: Retarded Transient Function
-Version: 0.1.27
+Version: 0.1.28
 Authors@R: 
   person("Clemens","Kreutz",
   email = "clemens.kreutz@uniklinik-freiburg.de",
@@ -13,7 +13,8 @@ Authors@R:
   comment = c(ORCID = "0000-0002-5488-0985"))
 Description: Fitting of retarded transient function to time resolved data.
 Imports: 
-    stats, ggplot2, reshape2, readxl, patchwork, grDevices, dplyr
+    stats, ggplot2, reshape2, readxl, patchwork, grDevices, dplyr, NbClust, 
+    umap, tibble
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
