--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getUMAPplot)
 export(hillEquation)
 export(initializeOptimObject)
 export(objFunct)
+export(objFunctGradient)
 export(plotData)
 export(plotDynamicsForClusters)
 export(plotFit)
