Model reduction isnow performed by a seperate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getTransientFunctionResult)
 export(getUMAPplot)
 export(hillEquation)
 export(initializeOptimObject)
+export(modelReduction)
 export(objFunct)
 export(objFunctGradient)
 export(plotData)
