--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(applyLog10ForTakeLog10)
 export(getDynamicsForClusters)
 export(getHillResults)
 export(getInitialGuessResults)
-export(getInitialGuessVec)
+export(getInitialGuessVecLst)
 export(getNamedVectorsFromDf)
 export(getParamDf)
 export(getParamsFromMultipleTimeSeries)
@@ -17,6 +17,7 @@ export(hillEquation)
 export(initializeOptimObject)
 export(lowDimensionalRTF)
 export(modelReduction)
+export(multiplyTimeParamsByFactor)
 export(objFunct)
 export(objFunctGradient)
 export(plotData)
@@ -31,7 +32,6 @@ export(plotRTFOnMultipleTimeSeries)
 export(plotUMAP)
 export(plotWaterfallPlot)
 export(runOptimization)
-export(scaleTimeParameter)
 export(selectSmallerModelIfDiffIsSmall)
 export(sortListByValue)
 export(takeLog10OfBounds)
