Changes to interactive UMAP plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,10 @@ export(multiplyTimeParamsByFactor)
 export(objFunct)
 export(objFunctGradient)
 export(plotData)
-export(plotDynamic2DPlot)
 export(plotDynamicsForClusters)
 export(plotFit)
+export(plotInteractive2DPlot)
+export(plotInteractiveUMAP)
 export(plotLowDimensionalRTF)
 export(plotParamDistribution)
 export(plotParamDistributionForClusters)
